--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/randomsearch)](https://cran.r-project.org/package=randomsearch)
 [![Build Status](https://travis-ci.org/jakob-r/randomsearch.png?branch=master)](https://travis-ci.org/jakob-r/randomsearch)
 [![Build status](https://ci.appveyor.com/api/projects/status/gvr607kqcl78qjq9/branch/master?svg=true)](https://ci.appveyor.com/project/jakob-r/randomsearch/branch/master)
-[![Coverage Status](https://img.shields.io/codecov/c/github/jakob-r/randomsearch/master.svg)](https://codecov.io/github/jakob-r/randomsearch?branch=master)
+[![Coverage Status](https://coveralls.io/repos/github/jakob-r/randomsearch/badge.svg?branch=master)](https://coveralls.io/github/jakob-r/randomsearch?branch=master)
 [![Monthly RStudio CRAN Downloads](https://cranlogs.r-pkg.org/badges/randomsearch)](https://CRAN.R-project.org/package=randomsearch)
 
 Model-based optimization with [mlr](https://github.com/jakob-r/mlr/).
