--- a/vignettes/randomsearch.Rmd
+++ b/vignettes/randomsearch.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "randomsearch: A brief introduction"
 vignette: >
-  %\VignetteIndexEntry{Tree structured ParamSets}
+  %\VignetteIndexEntry{randomsearch: A brief introduction}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -10,9 +10,6 @@ vignette: >
 library(randomsearch)
 set.seed(123)
 knitr::opts_chunk$set(cache = TRUE, collapse = FALSE)
-knitr::knit_hooks$set(document = function(x){
-  gsub("```\n*```r*\n*", "", x)
-})
 ```
 
 The package **randomsearch** optimizes a given [smoof function](https://cran.r-project.org/package=smoof).
