--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 # randomsearch
 
@@ -18,7 +20,7 @@ output: github_document
 
 ```{r setup, include=FALSE}
 set.seed(123)
-knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, warning = FALSE, error = FALSE)
+knitr::opts_chunk$set(collapse = FALSE, warning = FALSE, error = FALSE)
 library("randomsearch")
 ```
 
